--- a/.prettierrc
+++ b/.prettierrc
@@ -2,6 +2,8 @@
   "semi": true,
   "singleQuote": true,
   "tabWidth": 2,
+  "printWidth": 120,
+  "htmlWhitespaceSensitivity": "ignore",
   "trailingComma": "es5",
   "embeddedLanguageFormatting": "auto",
   "plugins": ["prettier-plugin-tailwindcss"]
