--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,25 @@
+# Dependencies
 node_modules/
-.vscode/
-/src/css/output.css
+backend/node_modules/
+
+# Environment variables
 .env
 .env.local
 *.env*
+backend/serviceAccountKey.json
+
+# Logs
+logs/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-logs/
-.DS_Store
-Thumbs.db
+
+# Build output / Cache
+/src/css/output.css
 .cache/
 .eslintcache
+
+# Editor / OS specific
+.vscode/
+.DS_Store
+Thumbs.db
