--- a/backend/package.json
+++ b/backend/package.json
@@ -4,12 +4,14 @@
   "description": "Backend server with MySQL and Firebase integration.",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mysql2": "^2.3.3",
     "firebase-admin": "^11.5.0",
-    "dotenv": "^16.0.3"
+    "mysql2": "^2.3.3",
+    "nodemon": "^3.1.10"
   }
 }
