--- a/backend/package.json
+++ b/backend/package.json
@@ -5,13 +5,15 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "migrate": "node database/run-migrations.js"
   },
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "firebase-admin": "^11.5.0",
-    "mysql2": "^2.3.3",
-    "nodemon": "^3.1.10"
+    "mysql2": "^3.9.7",
+    "nodemon": "^3.1.10",
+    "compression": "^1.7.4"
   }
 }
